--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.1.3"
   },
+  "overrides": {
+    "@types/react": "~18.2.45"
+  },
+
   "private": true
 }
